force-app/main/default/objects/Rate__c.object
<CustomObject>
    <fields>
        <fullName>Application_Date__c</fullName>
        <defaultValue>TODAY() - 1</defaultValue>
        <label>Application Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <referenceTo>Devise__c</referenceTo>
        <relationshipLabel>Rates</relationshipLabel>
        <relationshipName>Rates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Rate</label>
        <precision>18</precision>
        <required>true</required>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ToCurrency2__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>ToCurrency2</label>
        <referenceTo>Devise__c</referenceTo>
        <relationshipLabel>ToCurrency2</relationshipLabel>
        <relationshipName>ToRates</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Rate</label>
    <nameField>
        <label>To Currency</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>